fix(react-tabs-tertiary-svg): close icon svg remained black in dark mode as a result on the inherit

--- a/src/assets/stylesheets/Button.scss
+++ b/src/assets/stylesheets/Button.scss
@@ -143,10 +143,6 @@
 
     color: inherit;
 
-    svg {
-      fill: inherit;
-    }
-
     &:active,
     .btn-outer:active & {
       background-color: inherit;
